# robamine

./: .gitignore  CHANGELOG.md  Doxyfile  README.md  run.py  run_tests.py  setup.py
doc/: conf.py  examples.rst  index.rst  install.rst  library.bib  zreferences.rst
examples/: clutter-mujoco-only.py  ddpg-sphere-reacher.py  dummy-pendulum.py  evaluate.py  example.py  grasping-pillbox-ddpg-training.py  grasping-pillbox-her-play.py  grasping-pillbox-her-training.py  merge_replay_buffers.py  plot_stuff.py  random-action.py  run-mujoco-sim.py  run.py  store_replay_buffers.py  train-ddpg-clutter.py  train-ddpg-pendulum.py  train-ddpg-sphere-reacher.py  train.py  train_yaml.py
experiments/2020.01.19_ddpg/: acquire_data.py  data_acquisition.yml  eval.py  eval_ddpg.py  params.yml  params2.yml  params_dream.yml  params_iason.yml  params_yang.yml  plot_epsilon.py  plot_normal_noise.py  plots.py  run.py  run_supervised_obs_avoid.py  test_clutter_cont.py  test_clutter_cont_2000_seeds.py  test_data_augmentation.py  test_ddpg.py  test_ddpg_different_env_eval_iason.py  test_ddpg_dream.py  test_ddpg_iason.py  test_detach.py  test_grasp_obstacle.py  (+3 more)
gym-rlrl/: README.md  setup.py
rlrl/: CMakeLists.txt  package.xml
rlrl-py/: README.md  setup.py
rlrl/core/: CMakeLists.txt
rlrl/core/include/rlrl/: action.h  mdp.h  policy.h  reward.h  rollout.h  state.h
rlrl/core/src/: action.cpp  mdp.cpp  policy.cpp  reward.cpp  rollout.cpp  state.cpp
rlrl/include/: rlrl
rlrl/policy/: CMakeLists.txt
rlrl/policy/include/rlrl/: multivariate_normal_policy.h  stochastic_policy.h
rlrl/policy/src/: multivariate_normal_policy.cpp  stochastic_policy.cpp
rlrl_py/: README.md  __init__.py
robamine/: __init__.py  rb_logging.py
scripts/: replay_buffers_to_dataset.py
yaml/: available.yml  cartpole.yml  clutter-dqn-extra-primitive.yml  clutter-dqn.yml  clutter-dqnrot.yml  clutter-extra-primitive.yml  clutter-split-extra-primitive.yml  clutter-split.yml  clutter.yml  dqn_extra.yml  eval.yml  eval_real.yml  lwr-ddpg.yml  split.yml  split_extra.yml  split_extra_pretrained.yml  store_buffers.yml
(+289 files in other folders)
